k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: optmizejvm-deployment
  namespace: optmizejvm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: optmizejvm
  template:
    metadata:
      labels:
        app: optmizejvm
    spec:
      containers:
        - name: optmizejvm
          image: optmizejvm:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
