k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: optmizejvm-service
  namespace: optmizejvm
spec:
  type: ClusterIP
  selector:
    app: optmizejvm
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
