k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: optmizejvm-ingress
  namespace: optmizejvm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: optmizejvm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: optmizejvm-service
                port:
                  number: 80
